# DesignPattern

./: README.md
structural/composite/: CMakeLists.txt  main  main.cpp
structural/composite/include/: file.h  folder.h
structural/composite/interface/: IDirectory.h
structural/composite/src/: file.cpp  folder.cpp
structural/proxy/: CMakeLists.txt  main  main.cpp
structural/proxy/include/: lab.h  proxy.h  security.h
structural/proxy/src/: lab.cpp  security.cpp
